--- a/Idle Factory/HUD/HUD Actions Scenes/GameMarketplaceScene/GameMarketplaceScene.storyboard
+++ b/Idle Factory/HUD/HUD Actions Scenes/GameMarketplaceScene/GameMarketplaceScene.storyboard
@@ -559,6 +559,9 @@
                                                     <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                     <state key="normal" title="See announce"/>
+                                                    <connections>
+                                                        <action selector="buttonCell:" destination="4cU-kW-R5j" eventType="touchUpInside" id="QVq-Zm-FdM"/>
+                                                    </connections>
                                                 </button>
                                             </subviews>
                                             <constraints>
