--- a/Idle Factory/HUD/HUD Actions Scenes/GameSettingsScene/Settings.storyboard
+++ b/Idle Factory/HUD/HUD Actions Scenes/GameSettingsScene/Settings.storyboard
@@ -24,7 +24,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="Settings" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="or0-wz-3Tg">
-                                <rect key="frame" x="413.33333333333331" y="46" width="99.333333333333314" height="34"/>
+                                <rect key="frame" x="414" y="46" width="98" height="34"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="34" id="u6w-rY-Fce"/>
                                 </constraints>
@@ -33,7 +33,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="Sound effects" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zQ9-ke-i0M">
-                                <rect key="frame" x="302" y="191.66666666666666" width="149" height="24"/>
+                                <rect key="frame" x="303" y="191.66666666666666" width="148" height="24"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="24" id="WBA-eP-4Mc"/>
                                 </constraints>
@@ -41,7 +41,7 @@
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ClK-au-9Sw">
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ClK-au-9Sw">
                                 <rect key="frame" x="348" y="342" width="230" height="30"/>
                                 <color key="backgroundColor" name="HudActions-background"/>
                                 <constraints>
@@ -109,7 +109,7 @@
                                 </connections>
                             </segmentedControl>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="Song" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aAX-H7-jZG">
-                                <rect key="frame" x="394.33333333333331" y="131" width="56.666666666666686" height="24"/>
+                                <rect key="frame" x="397" y="131" width="54" height="24"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="24" id="NFW-gc-D19"/>
                                 </constraints>
@@ -118,7 +118,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="Marcelo Diefenbach" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vv4-ZD-Maa">
-                                <rect key="frame" x="475" y="253" width="215" height="24"/>
+                                <rect key="frame" x="475" y="253" width="213" height="24"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="24" id="EaG-dj-GuH"/>
                                 </constraints>
@@ -143,7 +143,7 @@
                                 </constraints>
                             </view>
                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="Name" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Q4-dW-JJl">
-                                <rect key="frame" x="387.33333333333331" y="253" width="63.666666666666686" height="24"/>
+                                <rect key="frame" x="389" y="253" width="62" height="24"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="24" id="Aqr-EX-X67"/>
                                 </constraints>
@@ -209,10 +209,10 @@
                                 <rect key="frame" x="104.33333333333331" y="43.333333333333343" width="717.33333333333348" height="320.33333333333326"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="28" translatesAutoresizingMaskIntoConstraints="NO" id="bLn-Xc-Oxt">
-                                        <rect key="frame" x="226.66666666666669" y="71.333333333333343" width="264" height="178"/>
+                                        <rect key="frame" x="226.66666666666669" y="80.333333333333343" width="264" height="160"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Limpar os dados pessoais vai alterar o seu nome de usuário, deseja continuar?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hJ5-5k-21F">
-                                                <rect key="frame" x="0.0" y="0.0" width="264" height="126"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="264" height="108"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="264" id="gwK-eT-dWG"/>
                                                 </constraints>
@@ -221,7 +221,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="13" translatesAutoresizingMaskIntoConstraints="NO" id="I7k-BZ-fdD">
-                                                <rect key="frame" x="25.666666666666686" y="154" width="213" height="24"/>
+                                                <rect key="frame" x="25.666666666666686" y="136" width="213" height="24"/>
                                                 <subviews>
                                                     <button opaque="NO" tag="10" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Me1-48-ffL">
                                                         <rect key="frame" x="0.0" y="0.0" width="100" height="24"/>
