alterações de refinamento de UI

--- a/Idle Factory/FactoryDetails/FactoryDetailScene.storyboard
+++ b/Idle Factory/FactoryDetails/FactoryDetailScene.storyboard
@@ -127,7 +127,7 @@
                                     <constraint firstAttribute="bottom" secondItem="VSP-EM-eUT" secondAttribute="bottom" constant="34.5" id="xpA-Lq-x8w"/>
                                 </constraints>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0GZ-Ut-UXT">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0GZ-Ut-UXT">
                                 <rect key="frame" x="781.5" y="41" width="55.5" height="45"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" image="close"/>
