--- a/Idle Factory/HUD/HUD Actions Scenes/GameShopScene/GameShopScene.storyboard
+++ b/Idle Factory/HUD/HUD Actions Scenes/GameShopScene/GameShopScene.storyboard
@@ -130,7 +130,7 @@
                                     <constraint firstAttribute="height" constant="23" id="rez-Cs-p1W"/>
                                 </constraints>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZLk-k3-MVr">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZLk-k3-MVr">
                                 <rect key="frame" x="787" y="52" width="45" height="45"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="45" id="7v5-qC-Dcv"/>
@@ -144,8 +144,9 @@
                                 </connections>
                             </button>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="XFG-dl-BNM">
-                                <rect key="frame" x="44" y="145" width="852" height="220"/>
+                                <rect key="frame" x="0.0" y="145" width="896" height="220"/>
                                 <color key="backgroundColor" name="HudActions-background"/>
+                                <inset key="scrollIndicatorInsets" minX="5" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="m3a-4B-mgd">
                                     <size key="itemSize" width="131" height="201"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -163,45 +164,45 @@
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wwu-mR-IIJ">
                                                     <rect key="frame" x="0.0" y="0.0" width="131" height="185"/>
                                                     <subviews>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="FUv-rU-gcX">
-                                                            <rect key="frame" x="20" y="123" width="91" height="15"/>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="FUv-rU-gcX">
+                                                            <rect key="frame" x="10" y="123" width="111" height="15"/>
                                                             <subviews>
                                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="L5b-vw-rb3">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="10.5" height="15"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="12" height="15"/>
                                                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                                 </view>
                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="4k.tv" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="bUI-h4-UC6">
-                                                                    <rect key="frame" x="11.5" y="0.5" width="10.5" height="14"/>
+                                                                    <rect key="frame" x="14" y="0.5" width="12.5" height="14"/>
                                                                     <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 </imageView>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sfW-sl-C6q">
-                                                                    <rect key="frame" x="23" y="3.5" width="10.5" height="8.5"/>
+                                                                    <rect key="frame" x="28.5" y="3.5" width="12" height="8.5"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="7"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="airpods" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="zzB-JF-hZh">
-                                                                    <rect key="frame" x="34.5" y="0.5" width="10.5" height="13.5"/>
+                                                                    <rect key="frame" x="42.5" y="0.5" width="12" height="13.5"/>
                                                                     <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 </imageView>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wYZ-0W-zHK">
-                                                                    <rect key="frame" x="46" y="3.5" width="10.5" height="8.5"/>
+                                                                    <rect key="frame" x="56.5" y="3.5" width="12" height="8.5"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="7"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tv" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="CID-my-hnn">
-                                                                    <rect key="frame" x="57.5" y="0.5" width="10.5" height="14"/>
+                                                                    <rect key="frame" x="70.5" y="0.5" width="12.5" height="14"/>
                                                                     <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 </imageView>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="id" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mPP-aW-Nx9">
-                                                                    <rect key="frame" x="69" y="3.5" width="10.5" height="8.5"/>
+                                                                    <rect key="frame" x="85" y="3.5" width="12" height="8.5"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="7"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yfv-Ce-Qr2">
-                                                                    <rect key="frame" x="80.5" y="0.0" width="10.5" height="15"/>
+                                                                    <rect key="frame" x="99" y="0.0" width="12" height="15"/>
                                                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                                 </view>
                                                             </subviews>
@@ -238,9 +239,9 @@
                                                         <constraint firstItem="FUv-rU-gcX" firstAttribute="top" secondItem="tlx-zL-UGs" secondAttribute="bottom" constant="8" symbolic="YES" id="IGp-ei-tV2"/>
                                                         <constraint firstItem="tlx-zL-UGs" firstAttribute="leading" secondItem="Wwu-mR-IIJ" secondAttribute="leading" constant="8" id="JI2-0h-zFZ"/>
                                                         <constraint firstAttribute="bottom" secondItem="59d-PJ-HhZ" secondAttribute="bottom" constant="16" id="NCn-vs-4Mi"/>
-                                                        <constraint firstItem="FUv-rU-gcX" firstAttribute="leading" secondItem="Wwu-mR-IIJ" secondAttribute="leading" constant="20" id="PWk-XH-ImW"/>
+                                                        <constraint firstItem="FUv-rU-gcX" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Wwu-mR-IIJ" secondAttribute="leading" constant="10" id="PWk-XH-ImW"/>
                                                         <constraint firstItem="59d-PJ-HhZ" firstAttribute="leading" secondItem="Wwu-mR-IIJ" secondAttribute="leading" constant="25" id="VWm-mA-yyS"/>
-                                                        <constraint firstAttribute="trailing" secondItem="FUv-rU-gcX" secondAttribute="trailing" constant="20" id="a0c-m1-KAH"/>
+                                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="FUv-rU-gcX" secondAttribute="trailing" constant="10" id="a0c-m1-KAH"/>
                                                         <constraint firstItem="59d-PJ-HhZ" firstAttribute="centerX" secondItem="Wwu-mR-IIJ" secondAttribute="centerX" id="fpI-sw-HHn"/>
                                                         <constraint firstItem="FUv-rU-gcX" firstAttribute="centerX" secondItem="Wwu-mR-IIJ" secondAttribute="centerX" id="iq2-VP-Xvb"/>
                                                         <constraint firstAttribute="trailing" secondItem="59d-PJ-HhZ" secondAttribute="trailing" constant="25" id="jbO-QK-vUJ"/>
@@ -298,7 +299,7 @@
                             <constraint firstAttribute="trailing" secondItem="XFG-dl-BNM" secondAttribute="trailing" id="27o-9N-U6R"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="XFG-dl-BNM" secondAttribute="bottom" constant="28" id="D5v-1D-QmV"/>
                             <constraint firstItem="zdo-80-blL" firstAttribute="top" secondItem="YfT-iT-NTG" secondAttribute="bottom" constant="30" id="FLR-NH-gkU"/>
-                            <constraint firstItem="XFG-dl-BNM" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="In5-Lx-3eS"/>
+                            <constraint firstItem="XFG-dl-BNM" firstAttribute="leading" secondItem="5EZ-qb-Rvc" secondAttribute="leading" id="In5-Lx-3eS"/>
                             <constraint firstItem="YfT-iT-NTG" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="45" id="PvO-0c-btK"/>
                             <constraint firstItem="zdo-80-blL" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="R4m-zP-Nqi"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="ZLk-k3-MVr" secondAttribute="trailing" constant="20" id="WI6-cX-C33"/>
