--- a/Idle Factory/HUD/HUD Actions Scenes/GameShopScene/Generate_NFT_Button/GenerateNFTConfirmation.storyboard
+++ b/Idle Factory/HUD/HUD Actions Scenes/GameShopScene/Generate_NFT_Button/GenerateNFTConfirmation.storyboard
@@ -20,41 +20,15 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7k5-mr-iUE">
                                 <rect key="frame" x="194" y="70" width="508" height="253"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Gerar uma Fábrica Premium aleatória vai custar:" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JWX-4z-QqM">
-                                        <rect key="frame" x="10" y="25" width="488" height="67"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="28"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="wFj-LT-F4Y">
-                                        <rect key="frame" x="188.5" y="94" width="131.5" height="43"/>
-                                        <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Money_premium" translatesAutoresizingMaskIntoConstraints="NO" id="jhk-I5-YkQ">
-                                                <rect key="frame" x="0.0" y="0.0" width="46" height="43"/>
-                                            </imageView>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="[Dinheiro]" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uq9-aD-1Be">
-                                                <rect key="frame" x="56" y="0.0" width="75.5" height="43"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                        </subviews>
-                                    </stackView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="*As fábricas premium possuem vantagens exclusivas nos desafios" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gGa-vw-MsS">
-                                        <rect key="frame" x="145" y="147" width="218" height="19.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="8"/>
-                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="yyC-oE-fii">
-                                        <rect key="frame" x="160" y="212" width="188" height="21"/>
+                                        <rect key="frame" x="147" y="209" width="214" height="24"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jT4-gQ-87b">
-                                                <rect key="frame" x="0.0" y="0.0" width="87" height="21"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="100" height="24"/>
                                                 <color key="backgroundColor" red="0.1053651944" green="0.65286397929999995" blue="0.82748192549999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="21" id="QHd-BU-T9h"/>
-                                                    <constraint firstAttribute="width" constant="87" id="uvi-AQ-C9v"/>
+                                                    <constraint firstAttribute="height" constant="24" id="QHd-BU-T9h"/>
+                                                    <constraint firstAttribute="width" constant="100" id="uvi-AQ-C9v"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
@@ -66,11 +40,11 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5gy-4g-1zS">
-                                                <rect key="frame" x="101" y="0.0" width="87" height="21"/>
+                                                <rect key="frame" x="114" y="0.0" width="100" height="24"/>
                                                 <color key="backgroundColor" red="0.64686661960000003" green="0.87376660110000004" blue="0.27036002279999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="21" id="8If-s3-TDs"/>
-                                                    <constraint firstAttribute="width" constant="87" id="GId-G1-iDK"/>
+                                                    <constraint firstAttribute="height" constant="24" id="8If-s3-TDs"/>
+                                                    <constraint firstAttribute="width" constant="100" id="GId-G1-iDK"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
@@ -83,19 +57,44 @@
                                             </button>
                                         </subviews>
                                     </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="11" translatesAutoresizingMaskIntoConstraints="NO" id="Fpp-cy-wn7">
+                                        <rect key="frame" x="51" y="54" width="406" height="119.5"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Gerar uma Fábrica Premium aleatória vai custar:" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JWX-4z-QqM">
+                                                <rect key="frame" x="0.0" y="0.0" width="406" height="67"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="wFj-LT-F4Y">
+                                                <rect key="frame" x="149" y="78" width="108.5" height="20.5"/>
+                                                <subviews>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Money_premium" translatesAutoresizingMaskIntoConstraints="NO" id="jhk-I5-YkQ">
+                                                        <rect key="frame" x="0.0" y="0.0" width="23" height="20.5"/>
+                                                    </imageView>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="[Dinheiro]" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uq9-aD-1Be">
+                                                        <rect key="frame" x="33" y="0.0" width="75.5" height="20.5"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                            </stackView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="*As fábricas premium possuem vantagens exclusivas nos desafios" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gGa-vw-MsS">
+                                                <rect key="frame" x="72.5" y="109.5" width="261.5" height="10"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="8"/>
+                                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemYellowColor"/>
                                 <constraints>
-                                    <constraint firstItem="JWX-4z-QqM" firstAttribute="leading" secondItem="7k5-mr-iUE" secondAttribute="leading" constant="10" id="1qS-zz-xev"/>
-                                    <constraint firstItem="JWX-4z-QqM" firstAttribute="top" secondItem="7k5-mr-iUE" secondAttribute="top" constant="25" id="LFj-EQ-3Gz"/>
-                                    <constraint firstItem="gGa-vw-MsS" firstAttribute="centerX" secondItem="7k5-mr-iUE" secondAttribute="centerX" id="RuR-UI-0l8"/>
-                                    <constraint firstItem="wFj-LT-F4Y" firstAttribute="centerX" secondItem="7k5-mr-iUE" secondAttribute="centerX" id="ahV-z2-ELh"/>
-                                    <constraint firstItem="gGa-vw-MsS" firstAttribute="top" secondItem="wFj-LT-F4Y" secondAttribute="bottom" constant="10" id="bEJ-oy-NaJ"/>
-                                    <constraint firstAttribute="trailing" secondItem="JWX-4z-QqM" secondAttribute="trailing" constant="10" id="dK6-Lc-LAP"/>
-                                    <constraint firstItem="gGa-vw-MsS" firstAttribute="leading" secondItem="7k5-mr-iUE" secondAttribute="leading" constant="145" id="g68-Q1-hve"/>
+                                    <constraint firstItem="JWX-4z-QqM" firstAttribute="width" secondItem="7k5-mr-iUE" secondAttribute="width" multiplier="0.8" id="1TC-cN-Img"/>
+                                    <constraint firstItem="Fpp-cy-wn7" firstAttribute="centerY" secondItem="7k5-mr-iUE" secondAttribute="centerY" multiplier="0.9" id="UkO-qE-veV"/>
                                     <constraint firstItem="yyC-oE-fii" firstAttribute="centerX" secondItem="7k5-mr-iUE" secondAttribute="centerX" id="gRn-MQ-tjm"/>
-                                    <constraint firstAttribute="trailing" secondItem="gGa-vw-MsS" secondAttribute="trailing" constant="145" id="mvr-e5-dm0"/>
-                                    <constraint firstItem="wFj-LT-F4Y" firstAttribute="top" secondItem="JWX-4z-QqM" secondAttribute="bottom" constant="2" id="u8k-DU-BX5"/>
+                                    <constraint firstItem="Fpp-cy-wn7" firstAttribute="centerX" secondItem="7k5-mr-iUE" secondAttribute="centerX" id="yi7-sf-tk2"/>
                                     <constraint firstAttribute="bottom" secondItem="yyC-oE-fii" secondAttribute="bottom" constant="20" id="zpx-BD-jgQ"/>
                                 </constraints>
                             </view>
@@ -124,7 +123,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Money_premium" width="46" height="43"/>
+        <image name="Money_premium" width="23" height="13"/>
         <systemColor name="systemYellowColor">
             <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
