--- a/Idle Factory/UpgradeFactory/UpgradeFactoryScene.storyboard
+++ b/Idle Factory/UpgradeFactory/UpgradeFactoryScene.storyboard
@@ -39,21 +39,21 @@
                                 <rect key="frame" x="390" y="145" width="446" height="173"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="UpgradeCell" rowHeight="38" id="qXZ-UT-oyc" customClass="UpgradeCell" customModule="Idle_Factory" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="44.5" width="446" height="38"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="UpgradeCell" rowHeight="51" id="qXZ-UT-oyc" customClass="UpgradeCell" customModule="Idle_Factory" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="44.5" width="446" height="51"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qXZ-UT-oyc" id="NEu-bC-qSj">
-                                            <rect key="frame" x="0.0" y="0.0" width="446" height="38"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="446" height="51"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="MI5-wc-PBN">
-                                                    <rect key="frame" x="0.0" y="0.0" width="70" height="41"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="80" height="41"/>
                                                     <subviews>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sTj-xf-eYq">
-                                                            <rect key="frame" x="0.0" y="0.0" width="70" height="25"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="80" height="25"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="25" id="VIJ-Nb-GBZ"/>
-                                                                <constraint firstAttribute="width" constant="70" id="bhO-D9-lxH"/>
+                                                                <constraint firstAttribute="width" constant="80" id="bhO-D9-lxH"/>
                                                             </constraints>
                                                             <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                                             <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -64,16 +64,16 @@
                                                             </connections>
                                                         </button>
                                                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="hx3-vd-l2e">
-                                                            <rect key="frame" x="0.0" y="29" width="70" height="12"/>
+                                                            <rect key="frame" x="0.0" y="29" width="80" height="12"/>
                                                             <subviews>
                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Coin" translatesAutoresizingMaskIntoConstraints="NO" id="K8L-3D-SSh">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="35" height="12"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="40" height="12"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="height" constant="12" id="jji-TA-YZf"/>
                                                                     </constraints>
                                                                 </imageView>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wYx-1V-vYh">
-                                                                    <rect key="frame" x="35" y="0.0" width="35" height="12"/>
+                                                                    <rect key="frame" x="40" y="0.0" width="40" height="12"/>
                                                                     <fontDescription key="fontDescription" name="AustralSlabBlur-Regular" family="Austral Slab" pointSize="12"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
@@ -83,7 +83,7 @@
                                                     </subviews>
                                                 </stackView>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1e8-yy-fxZ">
-                                                    <rect key="frame" x="86" y="9" width="20" height="20"/>
+                                                    <rect key="frame" x="96" y="13" width="20" height="20"/>
                                                     <color key="tintColor" systemColor="labelColor"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="20" id="Ksx-v0-ymI"/>
@@ -91,36 +91,37 @@
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H08-tj-qib">
-                                                    <rect key="frame" x="117" y="12" width="34.5" height="14"/>
+                                                    <rect key="frame" x="127" y="16" width="34.5" height="14"/>
                                                     <fontDescription key="fontDescription" name="AustralSlabBlur-Regular" family="Austral Slab" pointSize="14"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Coin" translatesAutoresizingMaskIntoConstraints="NO" id="8t2-sx-VcU">
-                                                    <rect key="frame" x="162.5" y="13" width="16" height="12"/>
+                                                    <rect key="frame" x="172.5" y="17" width="16" height="12"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="16" id="Dkl-la-yZ3"/>
                                                         <constraint firstAttribute="height" constant="12" id="Ydm-t4-WOA"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hfe-xt-dEg">
-                                                    <rect key="frame" x="180.5" y="13" width="29.5" height="12"/>
+                                                    <rect key="frame" x="190.5" y="17" width="29.5" height="12"/>
                                                     <fontDescription key="fontDescription" name="AustralSlabBlur-Regular" family="Austral Slab" pointSize="12"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="hfe-xt-dEg" firstAttribute="centerY" secondItem="NEu-bC-qSj" secondAttribute="centerY" id="3eR-tn-3JS"/>
-                                                <constraint firstItem="1e8-yy-fxZ" firstAttribute="centerY" secondItem="NEu-bC-qSj" secondAttribute="centerY" id="5vK-7a-q2g"/>
                                                 <constraint firstItem="H08-tj-qib" firstAttribute="leading" secondItem="1e8-yy-fxZ" secondAttribute="trailing" constant="11" id="DOb-nq-qwY"/>
+                                                <constraint firstItem="1e8-yy-fxZ" firstAttribute="centerY" secondItem="NEu-bC-qSj" secondAttribute="centerY" multiplier="0.9" id="FQV-eE-tHd"/>
+                                                <constraint firstItem="H08-tj-qib" firstAttribute="centerY" secondItem="NEu-bC-qSj" secondAttribute="centerY" multiplier="0.9" id="Ff5-wf-DjL"/>
                                                 <constraint firstItem="1e8-yy-fxZ" firstAttribute="leading" secondItem="MI5-wc-PBN" secondAttribute="trailing" constant="16" id="Kor-7Z-yiG"/>
                                                 <constraint firstItem="hfe-xt-dEg" firstAttribute="leading" secondItem="8t2-sx-VcU" secondAttribute="trailing" constant="2" id="KyN-jw-uph"/>
                                                 <constraint firstItem="8t2-sx-VcU" firstAttribute="leading" secondItem="H08-tj-qib" secondAttribute="trailing" constant="11" id="YGP-xZ-KtV"/>
                                                 <constraint firstItem="MI5-wc-PBN" firstAttribute="top" secondItem="NEu-bC-qSj" secondAttribute="top" id="ZBb-sE-C8N"/>
-                                                <constraint firstItem="8t2-sx-VcU" firstAttribute="centerY" secondItem="NEu-bC-qSj" secondAttribute="centerY" id="jM0-Ni-avV"/>
+                                                <constraint firstAttribute="bottom" secondItem="MI5-wc-PBN" secondAttribute="bottom" constant="10" id="ceq-TU-HQE"/>
+                                                <constraint firstItem="8t2-sx-VcU" firstAttribute="centerY" secondItem="NEu-bC-qSj" secondAttribute="centerY" multiplier="0.9" id="jlq-QB-fiD"/>
+                                                <constraint firstItem="hfe-xt-dEg" firstAttribute="centerY" secondItem="NEu-bC-qSj" secondAttribute="centerY" multiplier="0.9" id="uF4-Ue-pCd"/>
                                                 <constraint firstItem="MI5-wc-PBN" firstAttribute="leading" secondItem="NEu-bC-qSj" secondAttribute="leading" id="w7k-jL-WxA"/>
-                                                <constraint firstItem="H08-tj-qib" firstAttribute="centerY" secondItem="NEu-bC-qSj" secondAttribute="centerY" id="zUG-WZ-xRT"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -133,7 +134,7 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3ax-gh-cGC">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3ax-gh-cGC">
                                 <rect key="frame" x="780.5" y="41" width="55.5" height="45"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" image="close"/>
